<resources>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Users</string>
    <string name="tab_text_2">gestures</string>
    <string name="tab_text_3">devices</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="yes">yes</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="on_or_off">do you want to turn it on or off?</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="save_color">save Color</string>
    <string name="no">No!</string>
    <string name="save">Save</string>
    <string name="title_activity_main_ui">main_ui</string>
    <string name="users">users</string>
    <string name="gestures">gestures</string>
    <string name="devices">devices</string>
    <string name="adding_actions_for_gesture">Adding Actions for Gesture</string>
    <string name="add_another_action">add another action</string>
    <string name="save_and_apply_actions">save and apply actions</string>
    <string name="remove_action">   remove action   </string>
    <string name="_1">-1</string>

</resources>
