<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_user">

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.rls.smug_interface.user.UserFragment"
        android:label="@string/users"
        tools:layout="@layout/fragment_main_ui" />

    <fragment
        android:id="@+id/navigation_gesture"
        android:name="com.rls.smug_interface.gesture.GestureFragment"
        android:label="@string/gestures"
        tools:layout="@layout/fragment_main_ui" />

    <fragment
        android:id="@+id/navigation_device"
        android:name="com.rls.smug_interface.deviceAndAction.DeviceFragment"
        android:label="@string/devices"
        tools:layout="@layout/fragment_main_ui" />
</navigation>
