<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="416dp"
        android:layout_height="623dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/insideLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="none"
            android:text="@string/adding_actions_for_gesture"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/gestureNameTxt"
            android:layout_width="241dp"
            android:layout_height="60dp"
            android:text=""
            android:textSize="25sp"
            android:textColor="@color/gesture_color"
            app:layout_column="0"
            app:layout_row="1" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_row="0" />
    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/delActionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_action"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/saveAndApplyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_and_apply_actions"
            app:layout_column="2"
            app:layout_row="1" />

        <ImageView
            android:contentDescription="@string/add_new_action"
            android:id="@+id/imgAddAction"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@android:drawable/ic_input_add" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>